# libpoly

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  bench.sh  build.sh  test.sh
bench/: data.txt  main.cpp  run.py
include/: algorithm.hpp  algorithm.tpp  algorithms.hpp  algorithms.tpp  integer_mod.hpp  integer_mod.tpp  integer_mod_ring.hpp  monomial.hpp  monomial.tpp  order.hpp  order.tpp  polynomial.hpp  polynomial.tpp  polynomial_set.hpp  polynomial_set.tpp  term.hpp  term.tpp  utils.hpp  utils.tpp
src/: integer_mod_ring.cpp  monomial.cpp  order.cpp  term.tpp  utils.cpp
test/: main.cpp  tests.cpp  tests.hpp
tests/: main.cpp  tests.cpp  tests.hpp
